# statv

./: .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini  statv.py  test.py
.github/workflows/: deploy-docs.yml  test.yml
docs/: index.md  requirements.txt
docs/assets/: admonition.js  chat.css  curtain.css  extra.css
docs/overrides/partials/: copyright.html  social.html
