[project]
name = "statv"
version = "0.2.0"
description = "a uniform status implementation for graia project"
authors = [
    {name = "GreyElaina", email = "GreyElaina@outlook.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
