[project]
name = "statv"
version = "0.3.1"
description = "a uniform status implementation for graia project"
authors = [
    {name = "GreyElaina", email = "GreyElaina@outlook.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black~=22.6",
    "isort~=5.10",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
